@@ -4,7 +4,7 @@
   rbpoppler-document.c -
 
   $Author: ktou $
-  $Date: 2007/03/29 05:48:34 $
+  $Date: 2007/04/07 02:50:31 $
 
   Copyright (C) 2006 Ruby-GNOME2 Project Team
 
@@ -21,7 +21,7 @@
 #  define HAVE_POPPLER_FONT_INFO 1
 #endif
 
-static ID id_new, id_valid;
+static ID id_new, id_valid, id_ensure_uri;
 static VALUE cIndexIter;
 #ifdef HAVE_POPPLER_FONT_INFO
 static VALUE cFontInfo;
@@ -39,6 +39,7 @@ doc_initialize(int argc, VALUE *argv, VALUE self)
     rb_scan_args(argc, argv, "11", &uri, &rb_password);
 
     password = NIL_P(rb_password) ? NULL : RVAL2CSTR(rb_password);
+    uri = rb_funcall(self, id_ensure_uri, 1, uri);
     document = poppler_document_new_from_file(RVAL2CSTR(uri), password, &error);
 
     if (error)
@@ -368,6 +369,7 @@ Init_poppler_document(VALUE mPoppler)
 
     id_new = rb_intern("new");
     id_valid = rb_intern("valid?");
+    id_ensure_uri = rb_intern("ensure_uri");
 
     cDocument = G_DEF_CLASS(POPPLER_TYPE_DOCUMENT, "Document", mPoppler);
     cIndexIter = G_DEF_CLASS(POPPLER_TYPE_INDEX_ITER, "IndexIter", mPoppler);
